Improve new index flow

--- a/src/app/auth/profile/components/indexes/indexes.component.html
+++ b/src/app/auth/profile/components/indexes/indexes.component.html
@@ -4,16 +4,28 @@
 				<div class="col-xs-12">
 					<h2>My indexes</h2>
 
-					<app-alert type="error" *ngIf="!confirmed">Confirm your email address to create and share indexes.</app-alert>
+					<div *ngIf="!confirmed">
+						<app-confirm></app-confirm>
+					</div>
 
-					<app-alert type="info" title="What is an index?" *ngIf="confirmed">
+					<app-alert type="error" *ngIf="error">
+						<h5>{{error}}</h5>
+					</app-alert>
+
+					<app-alert type="success" title="New index created successfully!" *ngIf="created_index">
+						<h5>
+							<span *ngIf="created_index.name"><strong>Index name: </strong>{{created_index.name}}<br/></span>
+							<span *ngIf="created_index.world"><strong>World: </strong><span [outerHTML]="created_index.world | WorldNamePipe"></span><br/></span>
+						</h5>
+
+						<button *ngIf="created_index.key" class="btn btn-secondary mr-1" routerLink="/profile/overview/{{created_index.key}}">Go to index overview <mat-icon>launch</mat-icon></button>
+					</app-alert>
+
+					<app-alert type="info" title="What is an index?" *ngIf="confirmed && !error && !created_index">
 						<p>
 							An index is a collection of enemy intelligence that can be shared with other users.
 							You can create and share your own index, or you can contribute to an existing index.
 							<br/>For example, you can share an index with your alliance members and work together to collect enemy intel.
-						</p>
-						<p>
-							<strong>Please use the import button on this page to import your old index if it was created before 31 December 2020</strong>
 						</p>
 					</app-alert>
 
@@ -43,8 +55,8 @@
 								</thead>
 								<tbody>
 								<tr *ngFor="let index of indexes; let i = index;" class="index-row">
-									<td>
-										<a routerLink="/profile/overview/{{index.key}}"><mat-icon style="opacity: 1; vertical-align: sub;">account_balance</mat-icon> {{index.name || index.key}}</a>
+									<td (click)="routing('/profile/overview/' + index.key)">
+										<a><mat-icon style="opacity: 1; vertical-align: sub;">account_balance</mat-icon> {{index.name || index.key}}</a>
 										<!--<a routerLink="/profile/overview/{{index.key}}" class="gd-secondary">-->
 											<!--<img src="../../assets/images/grepodata_icon.ico" style="vertical-align: bottom;"/> {{index.name || index.key}}-->
 										<!--</a>-->
@@ -54,9 +66,9 @@
 										<div [outerHTML]="index.world | WorldNamePipe"></div>
 									<!--<td>{{index.role.replace('read', 'read only').replace('write', 'contributor')}}</td>-->
 									<!--<td>nobody</td>-->
-									<td (click)="index.contribute = !index.contribute">
+									<td>
 										<!--<mat-slide-toggle [ngModel]="index.contribute" (ngModelChange)="enableContributions(index.key)">Share my intel with this index</mat-slide-toggle>-->
-										<mat-checkbox *ngIf="index.role!='read'" [ngModel]="index.contribute" (ngModelChange)="enableContributions(index.key)">Share my intel with this index</mat-checkbox>
+										<mat-checkbox *ngIf="index.role!='read'" [checked]="index.contribute" (click)="enableContributions(index.key)">Share my intel with this index</mat-checkbox>
 									</td>
 									<td (click)="routing('/profile/overview/' + index.key)">
 										{{index.role
@@ -79,13 +91,7 @@
 							</table>
 						</div>
 
-
-
-
 					</div>
-
-
-
 
 					<div class="index-new">
 
@@ -93,99 +99,7 @@
 							Create a new index <mat-icon>library_add</mat-icon>
 						</button>
 
-
-						<!--<div class="container-fluid">-->
-							<!--<div class="row">-->
-								<!--<div style="margin-bottom: 10px;" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" [ngStyle]="!form_opened && {display: 'flex', justifyContent: 'center'}">-->
-
-									<!--<button *ngIf="!form_opened && !import_opened" (click)="newIndex()" class="btn btn-primary" style="margin-right: 10px;">-->
-										<!--Create a new index <mat-icon>library_add</mat-icon>-->
-									<!--</button>-->
-									<!--&lt;!&ndash;<button *ngIf="!form_opened && !import_opened" (click)="form_opened=true; new_index_created=false;" class="btn btn-primary" style="margin-right: 10px;">&ndash;&gt;-->
-										<!--&lt;!&ndash;Create a new index <mat-icon>library_add</mat-icon>&ndash;&gt;-->
-									<!--&lt;!&ndash;</button>&ndash;&gt;-->
-									<!--<button *ngIf="!form_opened && !import_opened" (click)="import_opened=true; new_index_imported=false;" class="btn btn-secondary">-->
-										<!--Import an old index (v1) <mat-icon>download</mat-icon>-->
-									<!--</button>-->
-
-									<!--<div *ngIf="form_opened && new_index_created" class="new-index-form-container">-->
-										<!--<h4 class="gd-primary">New index created succesfully!</h4>-->
-										<!--<p style="font-size: 18px;">You have created a new index named <strong>{{index_name}}</strong> for world <strong>{{world}}</strong></p>-->
-
-										<!--<br/>-->
-										<!--<button (click)="form_opened=false" class="btn btn-primary">Install the userscript to start collecting intel <mat-icon>download</mat-icon></button>-->
-										<!--<button (click)="form_opened=false" class="btn btn-secondary" style="float: right;">Close</button>-->
-									<!--</div>-->
-
-									<!--<div *ngIf="import_opened && !new_index_imported" class="new-index-form-container">-->
-										<!--<h4 class="gd-primary">Import an old index using the index key</h4>-->
-										<!--<p>Please enter the index key (8 characters). <strong>This only works for indexes created before 31 December 2020.</strong></p>-->
-
-										<!--<mat-form-field style="width: 100% !important; font-size: 20px !important;">-->
-											<!--<input autocomplete="off" style="width: 320px !important;" [ngModel]="import_key_input" (ngModelChange)="import_key_input=$event" required matInput placeholder="Enter the index key (8 characters)">-->
-										<!--</mat-form-field>-->
-
-										<!--<br/>-->
-										<!--<button (click)="import_opened=false" class="btn btn-primary">Import index <mat-icon>download</mat-icon></button>-->
-										<!--<button (click)="import_opened=false" class="btn btn-secondary" style="float: right;">Cancel</button>-->
-									<!--</div>-->
-
-									<!--<div *ngIf="form_opened && !new_index_created" class="new-index-form-container">-->
-										<!--<h4 class="gd-primary">Create a new private index</h4>-->
-										<!--<div class="">-->
-
-											<!--<div class="container-fluid">-->
-
-												<!--<div class="row">-->
-													<!--<div class="col-xs-12">-->
-														<!--<mat-form-field style="width: 100% !important; font-size: 20px !important;">-->
-															<!--<input autocomplete="off" style="width: 320px !important;" [ngModel]="index_name" (ngModelChange)="index_name=$event" required matInput placeholder="Enter a name for the index">-->
-														<!--</mat-form-field>-->
-													<!--</div>-->
-
-													<!--<div class="col-xs-12 col-sm-4">-->
-														<!--<mat-form-field style="margin-right: 15px; width: 70% !important; font-size: 20px !important;">-->
-															<!--<mat-select placeholder="Server" [ngModel]="server" (ngModelChange)="updateWorlds($event)" #select>-->
-																<!--<mat-option *ngFor="let s of servers" value="{{s}}">-->
-																	<!--<div class="bg-flag flag-inline flag-{{s}}"></div>&nbsp;{{s}}-->
-																<!--</mat-option>-->
-															<!--</mat-select>-->
-														<!--</mat-form-field>-->
-														<!--<mat-icon class="icon-margin" *ngIf="server" style="display: contents; width: calc(30% - 15px) !important;">-->
-															<!--<div class="bg-flag flag-inline flag-{{server}}" style="vertical-align: middle;"></div>-->
-														<!--</mat-icon>-->
-													<!--</div>-->
-
-													<!--<div class="col-xs-12 col-sm-8">-->
-														<!--<mat-form-field style="margin-right: 10px; width: 100% !important; font-size: 20px !important;">-->
-															<!--<mat-select placeholder="Select a world" [ngModel]="world" required (ngModelChange)="world = $event">-->
-																<!--<mat-option *ngFor="let w of worlds" value="{{w.id}}">{{w.id}} ({{w.name}})</mat-option>-->
-															<!--</mat-select>-->
-														<!--</mat-form-field>-->
-													<!--</div>-->
-												<!--</div>-->
-											<!--</div>-->
-										<!--</div>-->
-										<!--<button [disabled]="loading_new_index" class="btn btn-primary mr-1" (click)="captchaRef.execute()">Create new index</button>-->
-										<!--<button [disabled]="loading_new_index" (click)="form_opened=false" class="btn btn-secondary">Cancel</button>-->
-
-										<!--<mat-progress-bar style="margin-top: 10px;" *ngIf="loading_new_index" mode="indeterminate"></mat-progress-bar>-->
-
-										<!--<div class="row text-right" style="margin-top: 10px;">-->
-											<!--<re-captcha-->
-												<!--size="invisible"-->
-												<!--#captchaRef="reCaptcha"-->
-												<!--siteKey="{{recaptcha_key}}"-->
-												<!--(resolved)="$event && createNewIndex($event)">-->
-											<!--</re-captcha>-->
-										<!--</div>-->
-									<!--</div>-->
-								<!--</div>-->
-							<!--</div>-->
-						<!--</div>-->
-
 					</div>
-
 
 				</div>
 			</div>
