--- a/src/app/shared/dialogs/new-index/new-index.component.html
+++ b/src/app/shared/dialogs/new-index/new-index.component.html
@@ -1,8 +1,9 @@
 <div style="font-size: 18px; width: auto; max-width: 700px; min-width: 40vw;">
-	<a (click)="dialogRef.close()" class="close" *ngIf="building==false"></a>
+	<a (click)="close()" class="close" *ngIf="building==false"></a>
 	<h1 class="mat-primary" style="color: #18BC9C; margin-top: 0px;" mat-dialog-title>
 		<span *ngIf="submitted==false && building!=true">Create a new index</span>
 		<span *ngIf="submitted==false && building==true">Creating index..</span>
+		<span *ngIf="submitted==true && building!=true">Index created successfully!</span>
 	</h1>
 
 	<!--<div mat-dialog-content *ngIf="login_required" style="width: 100%;">-->
@@ -84,10 +85,26 @@
 			<div class="blob move-blob"></div>
 		</div>
 	</div>
-	<div *ngIf="submitted==true">
-		<h2>Index created successfully!</h2>
-		<h4 *ngIf="createError != ''">{{createError}}</h4>
-		<h4><a routerLink="/profile/overview/{{key}}">Go to your index page</a></h4>
+
+	<div *ngIf="submitted==true && createError == ''">
+		<app-alert type="success" title="Your new index has been created." [dismissible]="false">
+			<h5>
+				All reports that you index in world <strong><span [outerHTML]="createdIndex.world | WorldNamePipe"></span></strong> will now be added to this index.
+				<br/>
+				<br/>
+				<strong>Tip:</strong> Share the index with your allies to work together to collect enemy intelligence!
+			</h5>
+		</app-alert>
+		<br/>
+		<button *ngIf="createdIndex.key" class="btn btn-primary mr-1" (click)="showShareDialog()">Share index <mat-icon>group_add</mat-icon></button>
+		<button *ngIf="createdIndex.key" class="btn btn-secondary mr-1" routerLink="/profile/overview/{{createdIndex.key}}">Go to index overview <mat-icon>launch</mat-icon></button>
+		<button class="btn btn-secondary mr-1" style="float: right;" (click)="close()">Close</button>
+	</div>
+
+	<div *ngIf="submitted==true && createError != ''">
+		<app-alert type="error" title="Unable to create index.">
+			<h5>{{createError}}	</h5>
+		</app-alert>
 	</div>
 
 	<div class="row text-center" style="text-align: -webkit-center;" *ngIf="building!=true">
