Update empty index overview

--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -1,10 +1,10 @@
-<mat-card class="index-card">
+<mat-card class="dense-card">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10">
 
-				<h2 style="margin-top: 0;">In-game Userscript</h2>
-				<h4>This userscript allows you to collect enemy intelligence while playing Grepolis in your browser.</h4>
+				<h2 style="margin-top: 0;">Install the city indexer <span class="gd-primary">userscript</span></h2>
+				<h4>The GrepoData userscript allows you to collect enemy intelligence while playing Grepolis in your browser.</h4>
 				<br/>
 
 				<div class="alert alert-gd-1">
@@ -93,7 +93,39 @@
 				</div>
 
 				<div class="text-center">
-					<h3>Done! Happy indexing.</h3>
+					<h3>Done! You can now start collecting enemy intelligence.</h3>
+				</div>
+
+			</div>
+		</div>
+
+	</div>
+</mat-card>
+
+<mat-card class="dense-card">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10">
+
+				<h2 style="margin-top: 0;">Collecting enemy intelligence</h2>
+				<h4>Once you have installed the userscript, you can collect new intelligence by indexing reports from your inbox or alliance forum.</h4>
+				<br/>
+
+				<div class="alert alert-gd-1">
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-lg-6">
+								<h3>Indexing reports</h3>
+								<h5>
+									Use the <strong>'Index +' button</strong> as shown on the right to add reports to your index.
+									<br/>The index button will be added to reports in your inbox and on reports posted on your alliance forum.
+								</h5>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
+								<img class="lib-img" style="max-width: 100%; display: block;" src="../../../../../assets/images/index.png" alt="Collecting enemy town intelligence">
+							</div>
+						</div>
+					</div>
 				</div>
 
 			</div>
