--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -193,19 +193,25 @@
 											<a routerLink="/points" [queryParams]="{world: world}"><span [outerHTML]="world | WorldNamePipe"></span></a>
 										</td>
 									</tr>
-									<tr class="hidden-xs hidden-sm hidden-md">
+									<tr class="hidden-xs hidden-sm hidden-md" *ngIf="data.total_reports > 0">
 										<th>last addition</th>
 										<td>{{data.latest_report}}</td>
 									</tr>
-									<tr>
+									<tr *ngIf="data.total_reports > 0">
 										<th>
 											Index owner<span *ngIf="data.owners && data.owners.length > 1">s</span>
 										</th>
 										<td>
+											<div style="float: right;">
+												<a><mat-icon class="edit-owner" (click)="showSettingsDialog()">edit</mat-icon></a>
+											</div>
 											<div *ngFor="let owner of data.owners" matTooltip="Your intel is shared with allied alliances. You will see their intel, and they will see your intel. You can not see intel about each other's towns.">
 												<p class="gd-primary"><img src="../../assets/images/ally_ico.png" style="margin-top: -4px;"/> {{owner.alliance_name}}</p>
 											</div>
 										</td>
+									</tr>
+									<tr *ngIf="data.total_reports == 0">
+										<td colspan="2" class="text-center">This index is still empty!</td>
 									</tr>
 									</tbody>
 								</table>
@@ -218,7 +224,6 @@
 										<div class="col-xs-12 col-sm-6">
 											<button style="width: 100%;" class="btn btn-success mr-1" (click)="showShareDialog()">Share index&nbsp;&nbsp;<mat-icon>group_add</mat-icon></button>
 										</div>
-										<!--<button class="btn btn-secondary mr-1" (click)="showSettingsDialog()">Settings <mat-icon>settings</mat-icon></button>-->
 									</div>
 								</div>
 
@@ -329,109 +334,36 @@
 					<div class="container-fluid" id="new_index_install_tips">
 						<div class="row">
 							<div class="col-12 text-center">
-								<h1 class="gd-primary">Welcome to your unique enemy city indexer page!</h1>
-								<h3 *ngIf="!clicked">Follow the 2 steps below to install the userscript and start collecting enemy intel.</h3>
-								<p class="gd-secondary">If you experience any issues please feel free to <a class="a-link-dialog" (click)="showContactDialog()">contact</a> us.</p>
-								<br/>
 
-								<div class="container">
-									<div class="row">
-										<div *ngIf="!clicked">
-											<div class="alert alert-gd-1">
-												<h3><strong>Step 1:</strong> Install Tampermonkey for your browser</h3>
-												<p class="gd-secondary">Tampermonkey is the world's most popular userscript manager.</p>
-												<br/>
-												<div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center">
-													<div fxLayout="column" fxLayoutAlign="center center" style="width: 20%;">
-														<i style="font-size: 54px;" class="fa fa-chrome"></i><div>Chrome</div>
-														<a tabindex="-1" href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Install</a>
-													</div>
-													<div fxLayout="column" fxLayoutAlign="center center" style="width: 20%;">
-														<i style="font-size: 54px;" class="fa fa-safari"></i><div>Safari</div>
-														<a tabindex="-1" href="https://tampermonkey.net/?browser=safari" target="_blank">Install</a>
-													</div>
-													<div fxLayout="column" fxLayoutAlign="center center" style="width: 20%;">
-														<i style="font-size: 54px;" class="fa fa-firefox"></i><div>Firefox</div>
-														<a tabindex="-1" href="https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/?src=ss" target="_blank">Install</a>
-													</div>
-													<div fxLayout="column" fxLayoutAlign="center center" style="width: 20%;">
-														<i style="font-size: 54px;" class="fa fa-opera"></i><div>Opera</div>
-														<a tabindex="-1" href="https://addons.opera.com/en/extensions/details/tampermonkey-beta/" target="_blank">Install</a>
-													</div>
-													<div fxLayout="column" fxLayoutAlign="center center" style="width: 20%;">
-														<i style="font-size: 54px;" class="fa fa-edge"></i><div>Edge</div>
-														<a tabindex="-1" href="https://tampermonkey.net/?browser=edge" target="_blank">Install</a>
-													</div>
-												</div>
-												<br/>
-												<p class="gd-secondary">Restart your browser if you just installed Tampermonkey.</p>
-											</div>
 
-											<div fxLayout="row" fxLayoutAlign="center center" style="margin-bottom: 15px;">
-												<i class="fa fa-arrow-down"></i>
-											</div>
-
-											<div class="alert alert-gd-1">
-												<h3><strong>Step 2:</strong> Install the userscript for index {{key}}</h3>
-												<p>Each index has a uniquely generated userscript that will allow you to upload intelligence to this specific index.
-													<br/>Install the userscript and share it with your allies to start collecting intelligence in index {{key}}.</p>
-												<br/>
-												<a tabindex="-1" mat-button class="mat-raised-button bg-gd-2"
-												   style="font-size: 20px; padding: 8px; width: 80%; margin: 0 10%; color: white; overflow: hidden; text-overflow: ellipsis;"
-												   href="https://api.grepodata.com/userscript/cityindexer_{{encrypted}}.user.js" target="_blank"
-												   (click)="clicked=true">
-													<span class="fa fa-download"></span> Install userscript <span class="gd-primary" style="vertical-align: baseline;">{{key}}</span>
-												</a>
-											</div>
-										</div>
-
-										<div *ngIf="clicked">
-											<div class="row">
-												<div class="col-lg-12">
-													<div class="alert alert-gd-1">
-														<h3><strong>Done!</strong> Start collecting intel</h3>
-														<br/>
-														<p>
-															Restart your browser and start collecting intel!
-															The userscript will allow you to index reports from your alliance forum or from your personal inbox.
-															Simply click the <strong>index +</strong> button to upload a new report.
-															<br/><br/>
-															Spread the index to your alliance members so they can help you collect more intelligence about your enemies.
-															<br/><br/>
-															<strong>It may take up to 3 minutes before new reports are shown on your index overview.</strong>
-														</p>
-														<br/>
-														<div *ngIf="clicked" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="25px">
-															<button mat-button class="mat-raised-button mat-primary"
-															        style="width: 40%; font-size: 18px; padding: 8px; color: white;" (click)="refresh()">
-																Reload this page
-															</button>
-															<a class="gd-gray a-link"
-															   style="font-size: 16px; padding: 14px;"
-															   (click)="clicked = false">
-																<span class="fa fa-backward"></span> Show instructions
-															</a>
-															<a class="gd-gray a-link"
-															   style="font-size: 16px; padding: 14px;"
-															   href="https://api.grepodata.com/userscript/cityindexer_{{encrypted}}.user.js" target="_blank">
-																<span class="fa fa-download"></span> Download userscript
-															</a>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
+								<div class="hidden-xs hidden-sm" fxLayout="column" fxLayout.gt-xs="row" fxLayoutGap="0" style="margin-bottom: -25px;">
+									<div fxFlex="35" fxLayout="column" fxLayoutGap="5px">
+										<ng-container *ngTemplateOutlet="info"></ng-container>
 									</div>
-									<div class="row" *ngIf="!clicked">
-
-										<br/><br/>
-
-										<div class="alert alert-warning">
-											We have not yet received any reports for this index. <strong>It may take up to 3 minutes before reports are shown here.</strong><br/>
-											If there are no reports showing up or if you encounter any other problems please feel free to <a class="a-link-dialog" (click)="showContactDialog()">contact</a> us.
-										</div>
-
+									<div fxFlex="65" fxLayout="column" fxLayoutGap="5px">
+										<mat-card class="dense-card" style="max-height: 400px; height: 400px; min-height: 400px;">
+											<mat-card-title class="text-left">
+												<!--<h3 style='font-weight: 300; color: #304357; margin-top: 0 !important;'>-->
+													<!--<span class='world-title' style='color: #18BC9C;'>Most indexed players</span>-->
+												<!--</h3>-->
+												<h1 class="gd-primary">Welcome to your unique enemy city index!</h1>
+												<h4>This index allows you to share collected intelligence with other users.</h4>
+											</mat-card-title>
+											<mat-card-content class="text-left">
+												<h4>
+													<strong>Getting started:</strong><br/>
+												</h4>
+												<ul style="font-size: 20px;">
+													<li>Install the GrepoData userscript to collect intelligence.</li>
+													<li>Share this index with your allies by giving them access.</li>
+												</ul>
+											</mat-card-content>
+										</mat-card>
 									</div>
+								</div>
+
+								<div style="margin-top: 34px;" class="text-left" >
+									<app-userscript></app-userscript>
 								</div>
 
 							</div>
