--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,11 +43,12 @@ pre {
 }
 
 .hover-scale {
-  transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out !important;
 }
 .hover-scale:hover {
   cursor: pointer;
-  transform: scale(1.1);
+  transform: scale(1.05);
+  opacity: .8 !important;
 }
 
 .index-card {
