--- a/src/app/auth/profile/components/settings/settings.component.html
+++ b/src/app/auth/profile/components/settings/settings.component.html
@@ -1,7 +1,13 @@
-<app-paper
-  icon="settings"
-  title="Settings">
-		<app-change-password></app-change-password>
-		<hr>
-		<app-delete-account></app-delete-account>
-</app-paper>
+<mat-card class="index-card">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<h2>My GrepoData account</h2>
+				<app-change-password></app-change-password>
+			</div>
+			<div class="col-xs-12">
+				<app-delete-account></app-delete-account>
+			</div>
+		</div>
+	</div>
+</mat-card>
