--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -57,8 +57,7 @@
 							<div class="col-xs-12 col-sm-12 col-lg-6" style="padding-top: 5px;">
 								<a tabindex="-1" mat-button class="mat-raised-button bg-gd-2 hover-scale"
 								   style="font-size: 20px; padding: 8px; width: 100%; color: white; overflow: hidden; text-overflow: ellipsis;"
-								   href="https://api.grepodata.com/script/indexer.user.js" target="_blank"
-								   (click)="clicked=true">
+								   href="https://api.grepodata.com/script/indexer.user.js" target="_blank">
 									<span class="fa fa-download"></span> Install userscript
 								</a>
 							</div>
